--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,35 @@
 [project]
 name = "sharecareserver"
 version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.13"
+description = "Сервис обмена вещами Dobrodar"
+requires-python = ">=3.11"
+
 dependencies = [
-    "fastapi[all]",
-    "sqlalchemy",
-    "sqlalchemy-utils",
-    "passlib[bcrypt]",
-    "cryptography",
-    "psycopg2-binary",
-    "asyncpg",
-    "openai"
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "pydantic>=2.5.0",
+    "sqlalchemy>=2.0.0",
+    "sqlalchemy-utils>=0.41.1",
+    "passlib[bcrypt]>=1.7.4",
+    "cryptography>=41.0.3",
+    "psycopg2-binary>=2.9.6",
+    "asyncpg>=0.29.0",
+    "python-multipart>=0.0.6",        # Для загрузки файлов
+    "numpy>=1.24.0",                  # Для ML
+    "pillow>=10.0.0",                 # Для работы с изображениями
+    "ultralytics>=8.0.0",             # YOLOv8 для детекции объектов
+    "opencv-python>=4.8.0",           # Для работы с изображениями
+    "uuid6>=2023.5.2"
 ]
+
+[build-system]
+requires = ["setuptools>=68.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=7.4.0",
+    "httpx>=0.25.0",
+]
+[tool.setuptools]
+packages = ["app"]
