--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY=            
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-HOST=0.0.0.0
-SERVER_PORT=8080
-POSTGRES_PORT=7432
+HOST=
+SERVER_PORT=
+POSTGRES_PORT=
 
-POSTGRES_DB=sharecare
+POSTGRES_DB=
 
-# Fernet key must be 32 url-safe base64-encoded bytes
-# Его можно сгенерировать bash командой: dd if=/dev/urandom bs=32 count=1 2>/dev/null | base64 -w 0 | tr '+/' '-_'
 ENCRYPTION_KEY=
