Global Refactor - Remove default_asynx_db_request:   - Rewrite whole places where it was using - Return .env.example sample data - Remove playground.py from repo [Items] - Add service layer (move logic from router) - Remove extra schemas (for Mobile) - Router add handle_errors and require_auth - Create enums.py (Category, Status, Delivery) - Little refactor for models - Add mappers.py - CRUD:   - Move it to class `ItemCrud`   - Rewrite 3 methods
TODO:
- Rewrite whole items-module
- Images, deliveryTypes support

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-OPENAI_API_KEY=            
+OPENAI_API_KEY=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-HOST=
-SERVER_PORT=
-POSTGRES_PORT=
+HOST=0.0.0.0
+SERVER_PORT=8080
+POSTGRES_PORT=5432
 
-POSTGRES_DB=
+POSTGRES_DB=sharecare
 
+# Fernet key must be 32 url-safe base64-encoded bytes
+# Его можно сгенерировать bash командой: dd if=/dev/urandom bs=32 count=1 2>/dev/null | base64 -w 0 | tr '+/' '-_'
 ENCRYPTION_KEY=
