--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     working_dir: /sharecare
     volumes:
       - ./app:/sharecare/app
+      - ./uploads:/sharecare/uploads
     restart: unless-stopped
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
