--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -12,5 +12,9 @@ COPY --from=builder /venv_build/.venv /sharecare/.venv
 COPY ./app ./app
 ENV PATH="/sharecare/.venv/bin:$PATH"
 
+# Health check для мониторинга контейнера
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD python -c "import sys; sys.exit(0)" || exit 1
+
 
 
